--- a/package.json
+++ b/package.json
@@ -1,40 +1,32 @@
 {
-  "name": "discordbotlist",
-  "version": "1.0.0",
-  "description": "A discord bot list.",
-  "main": "server.js",
-  "scripts": {
-    "start": "node server.js"
-  },
-  "dependencies": {
-    "express": "^4.16.3",
-    "didyoumean":"*",
-    "request":"*",
-    "mongodb":"*",
-    "unirest":"*",
-    "btoa":"*",
-    "node-fetch":"*",
-    "klasa":"github:dirigeants/klasa",
-    "discord.js": "github:discordjs/discord.js",
-    "showdown":"*",
-    "ejs":"*",
-    "body-parser":"*",
-    "is-html":"*",
-    "is-url":"*",
-    "canvas-constructor":"kyranet/CanvasConstructor",
-    "canvas":"*",
-    "canvas-to-buffer":"*"
-  },
-  "engines": {
-    "node": "8.x"
-  },
-  "repository": {
-    "url": "https://glitch.com/edit/#!/hello-express"
-  },
-  "license": "MIT",
-  "keywords": [
-    "node",
-    "glitch",
-    "express"
-  ]
+    "name": "discordbotlist",
+    "version": "1.0.0",
+    "description": "A discord bot list.",
+    "main": "server.js",
+    "scripts": {
+        "start": "node server.js"
+    },
+    "dependencies": {
+        "express": "^4.16.3",
+        "didyoumean": "*",
+        "node-fetch": "*",
+        "mongodb": "*",
+        "unirest": "*",
+        "btoa": "*",
+        "node-fetch": "*",
+        "klasa": "github:dirigeants/klasa",
+        "discord.js": "github:discordjs/discord.js",
+        "showdown": "*",
+        "ejs": "*",
+        "body-parser": "*",
+        "is-html": "*",
+        "is-url": "*",
+        "canvas-constructor": "kyranet/CanvasConstructor",
+        "canvas": "*",
+        "canvas-to-buffer": "*",
+        "dotenv": "*"
+    },
+    "engines": {
+        "node": "8.x"
+    }
 }
