--- a/.env
+++ b/.env
@@ -8,6 +8,8 @@ BOT_DEVELOPER_ROLE_ID="" # Only bot developers have this role
 GUILD_ID="" # Your botlist's server ID
 MOD_LOG_ID="" # Your server's mod-log channel ID
 
+MONGO_DB_URL="" # Mongo db url. (mlab)
+
 DOMAIN="" # The domain where you're hosting the botlist
 
 ADMIN_USERS="" # The user IDs of all admin users separated by a space
