--- a/.env
+++ b/.env
@@ -1,19 +1,57 @@
-BOT_ROLE_ID="" # All bots will have this role - verified or not.
-UNVERIFIED_ROLE_ID="" # Only unverified bots have this role
-VERIFIED_ROLE_ID="" # Only verified bots have this role
-UNMUTED_ROLE_ID="" # Only unmuted bots have this role - make sure it has SEND_MESSAGES perms
-MUTED_ROLE_ID="" # Onle muted bots have this role - make sure it doesn't have SEND_MESSAGES perms
-BOT_DEVELOPER_ROLE_ID="" # Only bot developers have this role
+# All bots will have this role - verified or not.
+BOT_ROLE_ID=
 
-GUILD_ID="" # Your botlist's server ID
-MOD_LOG_ID="" # Your server's mod-log channel ID
+# Only unverified bots have this role
+UNVERIFIED_ROLE_ID=
 
-MONGO_DB_URL="" # Mongo db url. (mlab)
+# Only verified bots have this role
+VERIFIED_ROLE_ID=
 
-DOMAIN="" # The domain where you're hosting the botlist
+# Only unmuted bots have this role - make sure it has SEND_MESSAGES perms
+UNMUTED_ROLE_ID=
 
-ADMIN_USERS="" # The user IDs of all admin users separated by a space
+# Onle muted bots have this role - make sure it doesn't have SEND_MESSAGES perms
+MUTED_ROLE_ID=
 
-CLIENT_ID="" # This is your developer application's ID
-CLIENT_SECRET="" # This is your developer application's secret
-token="" # This is your developer application's bot's token
+# Only bot developers have this role
+BOT_DEVELOPER_ROLE_ID=
+
+# The role that people who verify bots have
+BOT_VERIFIERS_ROLE_ID=
+
+# --------------------------------------------------------------------------
+
+# Your botlist's server ID
+GUILD_ID=
+
+# Your server's mod-log channel ID
+MOD_LOG_ID=
+
+# --------------------------------------------------------------------------
+
+# Mongo db url. (mlab)
+MONGO_DB_URL=
+
+# --------------------------------------------------------------------------
+
+# The domain where you're hosting the botlist
+DOMAIN=
+
+# --------------------------------------------------------------------------
+
+# The user IDs of all admin users separated by a space
+ADMIN_USERS=
+
+# --------------------------------------------------------------------------
+
+# This is your developer application's ID
+CLIENT_ID=
+
+# This is your developer application's secret
+CLIENT_SECRET=
+
+# This is your developer application's bot's token
+DISCORD_TOKEN=
+
+# Your bot prefix
+PREFIX=
