--- a/.env
+++ b/.env
@@ -10,9 +10,6 @@ VERIFIED_ROLE_ID=
 # Only unmuted bots have this role - make sure it has SEND_MESSAGES perms
 UNMUTED_ROLE_ID=
 
-# Onle muted bots have this role - make sure it doesn't have SEND_MESSAGES perms
-MUTED_ROLE_ID=
-
 # Only bot developers have this role
 BOT_DEVELOPER_ROLE_ID=
 
@@ -34,7 +31,7 @@ MONGO_DB_URL=
 
 # --------------------------------------------------------------------------
 
-# The domain where you're hosting the botlist
+# The domain where you're hosting the botlist (with http:// or https://)
 DOMAIN=
 
 # --------------------------------------------------------------------------
