Server join link in .env

--- a/.env
+++ b/.env
@@ -21,6 +21,9 @@ BOT_VERIFIERS_ROLE_ID=
 # Your botlist's server ID
 GUILD_ID=
 
+# The invite link to your server
+GUILD_INVITE=
+
 # Your server's mod-log channel ID
 MOD_LOG_ID=
 
