Fixed d.js v12 error

--- a/.env
+++ b/.env
@@ -29,7 +29,7 @@ MOD_LOG_ID=
 
 # --------------------------------------------------------------------------
 
-# Mongo db url. (mlab)
+# Mongo db url. (mongodb atlas)
 MONGO_DB_URL=
 
 # --------------------------------------------------------------------------
