--- a/package.json
+++ b/package.json
@@ -13,13 +13,13 @@
         "canvas-constructor": "kyranet/CanvasConstructor",
         "colors": "^1.4.0",
         "cookie-parser": "^1.4.4",
-        "discord.js": "github:discordjs/discord.js",
+        "discord.js": "github:discordjs/discord.js#master",
         "dotenv": "^8.2.0",
         "ejs": "^3.0.1",
         "express": "^4.16.3",
         "is-html": "^2.0.0",
         "is-url": "1.2.4",
-        "klasa": "github:dirigeants/klasa#settings",
+        "klasa": "github:dirigeants/klasa#master",
         "module-alias": "^2.2.2",
         "mongodb": "^3.4.1",
         "node-fetch": "^2.6.0",
