--- a/package.json
+++ b/package.json
@@ -8,18 +8,17 @@
     },
     "dependencies": {
         "body-parser": "1.19.0",
-        "btoa": "^1.2.1",
         "canvas": "^2.6.1",
         "canvas-constructor": "kyranet/CanvasConstructor",
         "colors": "^1.4.0",
         "cookie-parser": "^1.4.4",
-        "discord.js": "github:discordjs/discord.js#master",
+        "discord.js": "^12.2.0",
         "dotenv": "^8.2.0",
         "ejs": "^3.0.1",
         "express": "^4.16.3",
         "is-html": "^2.0.0",
         "is-url": "1.2.4",
-        "klasa": "github:dirigeants/klasa#master",
+        "klasa": "github:dirigeants/klasa",
         "module-alias": "^2.2.2",
         "mongoose": "^5.9.10",
         "node-fetch": "^2.6.0",
