--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
         "passport": "^0.4.1",
         "passport-discord": "^0.1.4",
         "pug": "^3.0.0",
+        "recaptcha2": "^1.3.3",
         "sanitize-html": "^1.27.4",
         "showdown": "^1.9.1",
         "unirest": "^0.6.0"
