--- a/config-example.json
+++ b/config-example.json
@@ -4,7 +4,7 @@
         "id": "",
         "invite": "",
         "mod_log_id": "",
-        "vote_log": "",
+        "like_log": "",
         "admin_user_ids": [],
         "role_ids": {
             "bot": "",
