--- a/config-example.json
+++ b/config-example.json
@@ -17,8 +17,8 @@
     },
     "bot_options": {
         "bot_tags": [],
-        "max_owners_count": 4,
-        "max_bot_tags": 6
+        "max_bot_tags": 6,
+        "max_owners_count": 4
     },
     "discord_client": {
         "id": "",
