--- a/package.json
+++ b/package.json
@@ -21,14 +21,11 @@
         "module-alias": "^2.2.2",
         "mongoose": "^5.9.10",
         "node-fetch": "^2.6.0",
-        "node-pre-gyp": "^0.14.0",
         "passport": "^0.4.1",
         "passport-discord": "^0.1.4",
         "pug": "^3.0.0",
         "recaptcha2": "^1.3.3",
-        "sanitize-html": "^1.27.4",
-        "showdown": "^1.9.1",
-        "unirest": "^0.6.0"
+        "sanitize-html": "^1.27.4"
     },
     "devDependencies": {
         "nodemon": "2.0.4"
